--- a/src/SiteEngine/SiteEngine.csproj
+++ b/src/SiteEngine/SiteEngine.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="HtmlAgilityPack" Version="1.11.15" />
     <PackageReference Include="Markdig" Version="0.17.1" />
     <PackageReference Include="Markdown" Version="2.2.1" />
   </ItemGroup>
